HW6- MotorControll/MotorControll.cydsn/REBUILD.log
--------------- Rebuild Started: 05/09/2019 19:33:30 Project: MotorControll, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM0\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Backlight.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Backlight_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Cm0Start.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLFClk.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\R_LED.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\R_LED_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\G_LED.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\G_LED_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\B_LED.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\B_LED_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PWM_1.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PWM_1_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CapSense_1_Control.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CapSense_1_Processing.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CapSense_1_Structure.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CapSense_1_Tuner.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CapSense_1_Filter.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CapSense_1_Sensing.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CapSense_1_INT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CapSense_1_SensingCSD_LL.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CapSense_1_Centroid_LL.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CapSense_1_ISR.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Clock_2.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\MotorControll.hex"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\MotorControll.elf"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\MotorControll.map"
Deleting file ".\MotorControll.cycdx"
Deleting file ".\MotorControll.svd"
Deleting file ".\MotorControll.rpt"
Deleting file ".\MotorControll_timing.html"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\quint\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "D:\GIT\Microcontroller System Design Projects\HW6- MotorControll\MotorControll.cydsn\MotorControll.cyprj" -d CY8C4245AXI-483 -s "D:\GIT\Microcontroller System Design Projects\HW6- MotorControll\MotorControll.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c:11:5: warning: data definition has no type or storage class
     PWM_1_Start();
     ^
main.c:11:5: warning: type defaults to 'int' in declaration of 'PWM_1_Start' [-Wimplicit-int]
main.c:11:5: error: conflicting types for 'PWM_1_Start'
In file included from Generated_Source\PSoC4/project.h:41:0,
                 from main.c:6:
Generated_Source\PSoC4/PWM_1.h:306:8: note: previous declaration of 'PWM_1_Start' was here
 void   PWM_1_Start(void);
        ^
main.c:12:5: warning: data definition has no type or storage class
     Capsense_1_Start(); 
     ^
main.c:12:5: warning: type defaults to 'int' in declaration of 'Capsense_1_Start' [-Wimplicit-int]
main.c: In function 'main':
main.c:24:10: warning: unused variable 'mystring' [-Wunused-variable]
     char mystring[4];
          ^
main.c:23:15: warning: unused variable 'freqMax' [-Wunused-variable]
     const int freqMax=300; 
               ^
main.c:22:15: warning: unused variable 'freqMin' [-Wunused-variable]
     const int freqMin=50;
               ^
main.c:21:9: warning: unused variable 'freqPeriod' [-Wunused-variable]
     int freqPeriod=50;
         ^
main.c:20:9: warning: unused variable 'freqRaw' [-Wunused-variable]
     int freqRaw=50; 
         ^
main.c:19:9: warning: unused variable 'joyX' [-Wunused-variable]
     int joyX=0; 
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 05/09/2019 19:33:40 ---------------
